// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserDataCard should display the appropriate strings for FullScreenImage display 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "borderBottom": "inset",
      "borderRight": "inset",
      "display": "flex",
      "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
      "flexDirection": "column",
      "height": "auto",
      "justifyContent": "flex-start",
      "minWidth": "100%",
      "width": "auto",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
        "flexDirection": "row",
        "height": "auto",
        "justifyContent": "flex-start",
        "minWidth": "100%",
        "width": "auto",
      }
    }
  >
    <img
      alt="avatar"
      src="http://google.ca"
      style={
        Object {
          "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
          "height": "auto",
          "margin": "0.3%",
          "maxHeight": "120px",
          "width": "auto",
        }
      }
    />
    <div
      style={
        Object {
          "display": "flex",
          "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
          "flexDirection": "row",
          "height": "auto",
          "justifyContent": "space-between",
          "marginLeft": "1%",
          "minWidth": "78%",
          "width": "auto",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "flexDirection": "column",
            "height": "auto",
            "justifyContent": "flex-start",
            "minWidth": "85%",
            "width": "auto",
          }
        }
      >
        <p
          style={
            Object {
              "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
              "height": "auto",
              "width": "auto",
            }
          }
        >
          Photographer: 
          Test User
        </p>
        <p
          style={
            Object {
              "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
              "height": "auto",
              "width": "auto",
            }
          }
        >
          Rating: 
          99.99999995
          %
        </p>
      </div>
      <div
        style={
          Object {
            "alignSelf": "right",
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "height": "auto",
            "marginTop": "5px",
            "maxHeight": "40px",
            "width": "auto",
          }
        }
      >
        <img
          alt="like"
          src="test-file-stub"
          style={
            Object {
              "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
              "height": "auto",
              "maxWidth": "40px",
              "width": "auto",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "left",
        "display": "flex",
        "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
        "flexDirection": "column",
        "height": "auto",
        "justifyContent": "flex-start",
        "marginTop": "1%",
        "minWidth": "100%",
        "width": "auto",
      }
    }
  >
    <p
      style={
        Object {
          "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
          "marginLeft": "2%",
          "marginRight": "2%",
          "marginTop": "1%",
        }
      }
    >
      Location: 
      Toronto
      , 
      Canada
    </p>
  </div>
</div>
`;

exports[`UserDataCard should display the appropriate strings for imageItem display 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "borderBottom": "inset",
      "borderRight": "inset",
      "display": "flex",
      "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
      "flexDirection": "column",
      "height": "auto",
      "justifyContent": "flex-start",
      "minWidth": "100%",
      "width": "auto",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
        "flexDirection": "row",
        "height": "auto",
        "justifyContent": "flex-start",
        "minWidth": "100%",
        "width": "auto",
      }
    }
  >
    <img
      alt="avatar"
      src="http://google.ca"
      style={
        Object {
          "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
          "height": "auto",
          "margin": "0.3%",
          "maxHeight": "120px",
          "width": "auto",
        }
      }
    />
    <div
      style={
        Object {
          "display": "flex",
          "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
          "flexDirection": "row",
          "height": "auto",
          "justifyContent": "space-between",
          "marginLeft": "1%",
          "minWidth": "78%",
          "width": "auto",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "flexDirection": "column",
            "height": "auto",
            "justifyContent": "flex-start",
            "minWidth": "85%",
            "width": "auto",
          }
        }
      >
        <p
          style={
            Object {
              "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
              "height": "auto",
              "width": "auto",
            }
          }
        >
          Photographer: 
          Test User
        </p>
        <p
          style={
            Object {
              "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
              "height": "auto",
              "width": "auto",
            }
          }
        >
          Rating: 
          99.99999995
          %
        </p>
      </div>
      <div
        style={
          Object {
            "alignSelf": "right",
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "height": "auto",
            "marginTop": "5px",
            "maxHeight": "40px",
            "width": "auto",
          }
        }
      >
        <img
          alt="like"
          src="test-file-stub"
          style={
            Object {
              "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
              "height": "auto",
              "maxWidth": "40px",
              "width": "auto",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
